[tool.poetry]
name = "asynckivy"
version = "0.6.2"
description = "Async library for Kivy"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/asyncgui/asynckivy'
homepage = 'https://github.com/asyncgui/asynckivy'
keywords = ['async', 'kivy']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "asynckivy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
asyncgui = "~0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^6.0.0"
kivy = "^2.3.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.0.0"
sphinx-tabs = "^3.4.1"
sphinx-autobuild = "^2021.3.14"
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--maxfail=4 --strict-markers"
