[project]
name = "asynckivy"
version = "0.9.3"
description = "Async library for Kivy"
authors = [{ name = "Nattōsai Mitō", email = "flow4re2c@gmail.com" }]
license = "MIT"
readme = 'README.md'
requires-python = ">=3.10,<4.0"
keywords = ['async', 'kivy']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
dependencies = ["asyncgui>=0.9.3,<0.10"]

[project.urls]
Homepage = "https://github.com/asyncgui/asynckivy"
Repository = "https://github.com/asyncgui/asynckivy"

[dependency-groups]
dev = [
    "pytest>=7.0.1,<8",
    "flake8>=6.0.0,<7",
    "kivy===2.3.1",
]
doc = [
    "sphinx>=7.0.0,<8",
    "sphinx-tabs>=3.4.1,<4",
    "sphinx-autobuild>=2021.3.14,<2022",
    "furo>=2023.9.10,<2024",
]

[tool.uv]
default-groups = ["dev", ]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--maxfail=4 --strict-markers"
