[metadata]
name = asynckivy
version = 0.2.0
url = https://github.com/gottadiveintopython/asynckivy
author = Nattōsai Mitō
author_email = flow4re2c@gmail.com
license_file = LICENSE
classifier =
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = asyncgui>=0.2.1

[flake8]
per-file-ignores=
  ./asynckivy/__init__.py:F401,F403
  ./asynckivy/_rest_of_touch_moves.py:C901
