[metadata]
name = asynckivy
version = 0.5.2
url = https://github.com/gottadiveintopython/asynckivy
author = Nattōsai Mitō
author_email = flow4re2c@gmail.com
license_file = LICENSE
classifier =
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = asyncgui>=0.5,<0.6

[flake8]
ignore = C901,E252,E402
per-file-ignores=
  ./asynckivy/__init__.py:F401,F403
  ./examples/misc/speed_comparision_between_schedule_interval_and_sleep.py:E402
