[metadata]
name = asynckivy
version = 0.6.0.dev0
url = https://github.com/gottadiveintopython/asynckivy
author = Nattōsai Mitō
author_email = flow4re2c@gmail.com
license_file = LICENSE
classifier =
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = asyncgui>=0.5,<0.6

[flake8]
ignore = C901,E252
per-file-ignores=
  ./asynckivy/__init__.py:F401,F403
  ./examples/*.py:E402
  ./investigation/*.py:E402
